Clean up alignment issues

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
 .header {
   display: flex;
   justify-content: space-between;
-  padding: 16px;
+  padding: 16px 0;
   margin: 0;
   align-items: center;
 }
@@ -54,15 +54,16 @@ a {
 }
 
 .hero-image {
-  max-height: 300px;
+  max-height: 250px;
+  margin: auto;
 }
 
 .header-body {
   display: flex;
   align-items: center;
-  height: 300px;
-  gap: 48px;
-  padding: 48px 16px 72px 16px;
+  height: 250px;
+  gap: 100px;
+  padding: 48px 0 72px 0;
 }
 
 .header-signup {
@@ -70,6 +71,7 @@ a {
   flex-direction: column;
   gap: 16px;
   align-items: flex-start;
+  width: 400px;
 }
 
 button {
@@ -110,7 +112,7 @@ button {
 .card-image {
   width: 150px;
   height: 150px;
-  border: 4px solid #3882F6;
+  border: 2px solid #3882F6;
   border-radius: 16px;
 }
 
@@ -138,4 +140,46 @@ button {
 .quote-source {
   align-self: flex-end;
   font-weight: 900;
+}
+
+.action-body {
+  display: flex;
+  background: white;
+  width: 100vw;
+  justify-content: center;
+  align-items: center;
+  padding: 48px;
+}
+
+.action-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: #3882F6;
+  padding: 24px;
+  margin: 0;
+  width: 852px;
+  border-radius: 8px;
+}
+
+.action-left {
+  margin-left: 48px;
+}
+
+.button-container {
+  margin-right: 48px;
+}
+
+button.action {
+  border: 1px solid white;
+}
+
+.action-header {
+  color: #F9FAF8;
+  font-weight: 700;
+  font-size: 24px;
+}
+
+.action-text {
+  color: #E5E7EB;
 }
